// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Separator Playground 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
      "width": "500px",
    }
  }
>
  <div
    className="Separator__StyledContainer-y87nwe-0 fYQAah"
  >
    <div
      className="Separator__StyledWrapper-y87nwe-1 bkojVI"
    >
      <hr
        className="Separator__StyledLine-y87nwe-2 cKqBbM"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Separator With Label 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
      "width": "500px",
    }
  }
>
  <div
    className="Separator__StyledContainer-y87nwe-0 fYQAah"
  >
    <div
      className="Separator__StyledLabel-y87nwe-3 klxkJW"
    >
      <span>
        O
      </span>
    </div>
    <div
      className="Separator__StyledWrapper-y87nwe-1 bkojVI"
    >
      <hr
        className="Separator__StyledLine-y87nwe-2 cKqBbM"
      />
    </div>
  </div>
</div>
`;
